src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/WGLARBCreateContext_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/WGLARBCreateContext_StringErrorContext.class */
public final class WGLARBCreateContext_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nwglCreateContextAttribsARB(JJJ)J", "net/labymod/core/laby3d/opengl/error/generated/WGLARBCreateContextErrorContext");
        methods.put("wglCreateContextAttribsARB(JJLjava/nio/IntBuffer;)J", "net/labymod/core/laby3d/opengl/error/generated/WGLARBCreateContextErrorContext");
        methods.put("wglCreateContextAttribsARB(JJ[I)J", "net/labymod/core/laby3d/opengl/error/generated/WGLARBCreateContextErrorContext");
        return methods;
    }
}
